# fastapi-starter-template

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  connect.py  models.py
migrations/: env.py
migrations/versions/: da994cb8ce82_initial_migration.py
